# hackeeg-client-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
lsl-sys/: Cargo.toml  build.rs  wrapper.h
lsl-sys/src/: bindings.rs  lib.rs
lsl-sys/src/bindings/: lsl_bindings.rs  mod.rs
src/: lib.rs  main.rs
src/client/: err.rs  mod.rs  modes.rs  sample.rs
src/client/commands/: args.rs  mod.rs  responses.rs
src/common/: ads1299.rs  constants.rs  log.rs  mod.rs
src/common/constants/: ads1299.rs  mod.rs
