[package]
name = "hackeeg-client-rust"
version = "0.1.0"
authors = ["Adam Feuer <adam@starcat.io>"]
edition = "2018"
license = "Apache-2.0"

[workspace]
members = [".", "lsl-sys"]

[dependencies]
lsl-sys = { path = "./lsl-sys" }
clap = "*"
serialport = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
log = "0.4.8"
fern = "0.5.9"
chrono = "0.4.10"
rmp-serde = "0.14.0"
base64 = "0.11.0"
byteorder = "1.3.2"
uuid = {version= "0.8.1", features=["v5"]}
signal-hook = "0.1.12"
serde_bytes = "0.11"

[lib]
name = "hackeeg"
path = "src/lib.rs"

[[bin]]
name = "hackeeg-stream"
path = "src/bin/hackeeg_stream.rs"
