[package]
name = "lsl-sys"
version = "0.1.0"
authors = ["Andrew Moffat <arwmoffat@gmail.com>", "Adam Feuer <adam@starcat.io>"]
edition = "2021"
links = "lsl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(windows)'.build-dependencies]
powershell_script = "1.1.0"

[build-dependencies]
num_cpus = "1.12.0"
bindgen = "0.52.0"
flate2 = "1.0.13"
tar = "0.4.26"
